# nyr

./: .gitignore  Cargo.toml  README.md
migrations/: 20250104142419_targets.sql  20250104143055_progress_records.sql
src/: app.rs  main.rs  progress_bar.rs  progress_records.rs  records.rs  targets.rs
