[package]
name = "nyr"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
directories = "5.0.1"
include_dir = "0.7.4"
iocraft = "0.6.0"
log = "0.4.22"
smol = "2.0.2"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
